# handrolled

./: .clang-tidy  CMakeLists.txt  Makefile  README.md
examples/: example_array.c  example_hashmap.c  example_vector.c
include/: handrolled.h
include/handrolled/: array.h  common.h  hashmap.h  vector.h
src/: array.c  hashmap.c  vector.c
tests/: test_array.c  test_hashmap.c  test_vector.c
